--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -60,3 +60,39 @@
         display: none;
     }
 }
+
+@media (max-width: 768px) {
+    .sidebar {
+        width: 60px;
+        padding: 10px;
+    }
+
+    .sidebar img {
+        height: 30px;
+        width: 30px;
+    }
+
+    .add, .history {
+        gap: 5px;
+    }
+
+    .add p, .history p {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 576px) {
+    .sidebar {
+        width: 50px;
+        padding: 5px;
+    }
+
+    .sidebar img {
+        height: 25px;
+        width: 25px;
+    }
+
+    .add p, .history p {
+        font-size: 10px;
+    }
+}
