--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+     word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .container{
@@ -51,3 +54,4 @@ html {
         font-size: 12px;
     }
 }
+
